--- a/src/components/container/About/About.scss
+++ b/src/components/container/About/About.scss
@@ -41,7 +41,7 @@
         .bio {
             display: flex;
             font-size: 0.85rem;
-            max-width: 200px;
+            // max-width: 200px;
             margin-bottom: 1rem;
 
             .bioKey {
